discussion/kv_engine/177008/177008_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create standalone unit test for GetRandomKey

There is something "strange" with the implementation of GetRandomKey
on the server as it seems to be a delay until the key gets available
after being stored on the server.

After storing a document you may immediately fetch it through a
call with get, but that doesn't seem to be the case with GetRandomKey
as I had to add a few retries until it got available.

Change-Id: Iaa0a2f76822bf4701c79ac65eaab6ca9fb0833a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:34:36.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 15:16:42.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47330/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [73/160]: disk>RAM golden path.....\kv_engine\engines\ep\tests\ep_testsuite.cc:4296 Test failed: `" (Expected `172", got `92" - kv_size should have returned to initial value after restoring evicted item)
(111 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47330/ )

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.986301\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (46 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47330/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18572/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18572/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18572/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20804/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:38:09.884Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T13:38:09.884Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:38:09.884Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21444/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T14:00:18.391Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T14:00:18.391Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T14:00:18.391Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (20 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28837/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:48:02.063Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T13:48:02.063Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:48:02.063Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28837/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8243/ : FAILURE

Compile error at [2022-07-03T13:15:17.346Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8243/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8342/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:18:08.900Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T13:18:08.900Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:18:08.900Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (0 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20456/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [74/160]: disk>RAM paged-out rm...../kv_engine/engines/ep/tests/ep_testsuite.cc:4324 Test failed: `" (Expected `5314" to be greater than or equal to `5465" - Fell below initial overhead.)
[2022-07-03T13:27:57.033Z] (86 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20456/ )

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T13:28:49.946Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T13:28:49.946Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T13:28:49.946Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20456/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19678/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T15:02:58.480Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T15:02:58.480Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T15:02:58.480Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (3 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19678/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17723/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39784/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
